--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
 <body>
     <nav>
-        <!-- <div class="barra">
+        <div class="barra">
             <div>
                 <a href="#">                
-                    <img src="./assets/img/idea.png" alt="">
+                    <img src="./assets/img/barra-menu.png" alt="">
                 </a>
             </div>
-        </div> -->
+        </div>
         <div class="menu">
             <a href="index.html"><img class="logo" src="./assets/img/logo/logo-azul.png" alt="imagem do logo, representado por..."></a>
             <div>
@@ -109,7 +109,7 @@
             </div>
         </section>
     </main>
-    
+
     <footer>
         <div>
             <p>Site feito por <a href="https://br.linkedin.com/in/jessikacostac" target="_blank">Jéssika Costa Cardoso</a> Projeto desenvolvido para fins de estudo na {Reprograma}</p>
