update section-info and carousel picture

--- a/front.html
+++ b/front.html
@@ -14,7 +14,9 @@
     <nav>
         <div class="barra">
             <div>
-                <img src="./assets/img/barra-menu.png" alt="">
+                <a href="#">                
+                    <img src="./assets/img/barra-menu.png" alt="">
+                </a>
             </div>
         </div>
         <div class="menu">
@@ -24,43 +26,32 @@
                     <li><a href="">Home</a></li>
                     <li><a href="#carreira">Desenvolvedora Front-End</a></li>
                     <li><a href="acessibilidade-web.html">Acessibilidade Web</a></li>
+                    <li><a href="comunidades-eventos.html">Comunidade/Eventos</a></li>
                 </ul>
             </div>
         </div>
         
     </nav>
-    <header>
-        <div id="slider">
-            <div>
-                <img src="./assets/img/slider1.jpg" alt="Imagem de um rosto de uma mulher coberto pela metade do lado esquerdo por uma sombra de números binários, e ela está sendo apontada por um braço humano de um lado e do outro por um braço robótico. ">
-                <h3>Vamos programar o futuro</h3>
-            </div>
-            <div>
-                <img src="./assets/img/mulher-tech.jpg" alt="Descrição da foto do carousel">
-                <h3>Desenvolvendo Divas, Divas Desenvolvedoras</h3>
-            </div>
-            <div>
-                <img src="./assets/img/web-acessibilty_blog.jpg" alt="Descrição da foto do carousel">
-                <h3>Precisamos falar sobre <strong>Acessibilidade Web</strong></h3>
-            </div>
-        </div>
-    </header>
     <main>
         <section class="info">
-                <div>
-                        <img src="./assets/img/barra-section.png" alt="">
-                    </div>
             <div class="title">
-                <h2>Nossa Missão</h2>
-                <p>Disseminar conhecimento e cultura tecnológica para mulheres visando diminuir o gap de gênero do setor e incentivar o desenvolvimento de sites acessíveis</p>
+                <h2>Desenvolvimento Front-End</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore distinctio aliquam nemo adipisci necessitatibus consectetur laborum commodi fugiat ipsam natus quidem ducimus accusantium voluptatibus pariatur inventore excepturi sunt provident obcaecati mollitia aliquid sapiente, iusto architecto reiciendis sint! Hic a itaque, non obcaecati laborum unde velit pariatur culpa modi doloremque! Velit.</p>
                 <div class="cards">
                     <div>
-                        <p><img src="./assets/img/girl.png" alt="imagem de uma menina"></p>
-                        <p>10%</p>
+                        <h3>Titulo</h3>
+                        <p><img src="" alt="">_____________</p>
+                        <p>67%</p>
                     </div>
                     <div>
-                        <p><img src="./assets/img/boy.png" alt="imagem de uma menino" alt=""></p>
-                        <p>90%</p>
+                        <h3>Titulo</h3>
+                        <p><img src="" alt="">_____________</p>
+                        <p>67%</p>
+                    </div>
+                    <div>
+                        <h3>Titulo</h3>
+                        <p><img src="" alt="">_____________</p>
+                        <p>67%</p>
                     </div>
                 </div>    
             </div>
