update section missao e footer

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Developing<Div>as> </title>
+    <title> Developing
+        <Div>as> </title>
     <link rel="icon" href="./assets/img/logo/bathroom-2028084_1280.png" sizes="64x64">
-    <link rel="stylesheet" type="text/css" href="./assets/slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="./assets/slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="./assets/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/slick/slick-theme.css" />
     <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 
@@ -18,16 +20,24 @@
             </div>
         </div>
         <div class="menu">
-            <a href="index.html"><img class="logo" src="./assets/img/logo/logo-azul.png" alt="imagem do logo, representado por..."></a>
+            <a href="index.html">
+                <img class="logo" src="./assets/img/logo/logo-azul.png" alt="imagem do logo, representado por...">
+            </a>
             <div>
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="#carreira">Desenvolvedora Front-End</a></li>
-                    <li><a href="acessibilidade-web.html">Acessibilidade Web</a></li>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="#carreira">Desenvolvedora Front-End</a>
+                    </li>
+                    <li>
+                        <a href="acessibilidade-web.html">Acessibilidade Web</a>
+                    </li>
                 </ul>
             </div>
         </div>
-        
+
     </nav>
     <header>
         <div id="slider">
@@ -41,30 +51,49 @@
             </div>
             <div>
                 <img src="./assets/img/web-acessibilty_blog.jpg" alt="Descrição da foto do carousel">
-                <h3>Precisamos falar sobre <strong>Acessibilidade Web</strong></h3>
+                <h3>Precisamos falar sobre
+                    <strong>Acessibilidade Web</strong>
+                </h3>
             </div>
         </div>
     </header>
     <main>
-        <section class="info">
-                <div>
-                        <img src="./assets/img/barra-section.png" alt="">
-                    </div>
-            <div class="title">
-                <h2>Nossa Missão</h2>
-                <p>Disseminar conhecimento e cultura tecnológica para mulheres visando diminuir o gap de gênero do setor e incentivar o desenvolvimento de sites acessíveis</p>
-                <div class="cards">
-                    <div>
-                        <p><img src="./assets/img/girl.png" alt="imagem de uma menina"></p>
-                        <p>10%</p>
-                    </div>
-                    <div>
-                        <p><img src="./assets/img/boy.png" alt="imagem de uma menino" alt=""></p>
-                        <p>90%</p>
-                    </div>
-                </div>    
+        <section class="missao">
+            <div class="barra">
+                <img src="./assets/img/barra-section.png" alt="">
             </div>
-         </section>
+            <h2>Nossa Missão</h2>
+            <div class="call-to-action">
+                <div class="title">
+                    <p>Disseminar conhecimento e cultura tecnológica para mulheres visando diminuir o gap de gênero do setor</p>
+                    <div class="cards">
+                        <div>
+                            <p>
+                                <img src="./assets/img/girl.png" alt="imagem de uma menina">
+                            </p>
+                            <p>10%</p>
+                        </div>
+                        <div>
+                            <p>
+                                <img src="./assets/img/boy.png" alt="imagem de uma menino" alt="">
+                            </p>
+                            <p>90%</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="title">
+                    <p><br>   Incentivar o desenvolvimento de sites <br> e aplicativos acessíveis</p>
+                    <div class="cards">
+                        <div>
+                            <p>
+                                <img class="acess" src="./assets/img/acess.jpg" alt="imagem de uma menina">
+                            </p>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section id="carreira" class="carreiras">
             <div>
@@ -76,19 +105,22 @@
                     <div class="front">
                         <img src="./assets/img/front-end.png.png" alt="">
                         <h3>Front-End</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident tenetur dignissimos rerum perspiciatis nisi quidem?</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident tenetur dignissimos rerum perspiciatis
+                            nisi quidem?</p>
                         <a class="btn" href="#">Saiba mais</a>
                     </div>
                     <div class="back">
                         <img src="./assets/img/back-end.jpg" alt="">
                         <h3>Back-End</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident tenetur dignissimos rerum perspiciatis nisi quidem?</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident tenetur dignissimos rerum perspiciatis
+                            nisi quidem?</p>
                         <a class="btn" href="#">Saiba mais</a>
                     </div>
                     <div class="mobile">
                         <img src="./assets/img/android.png" alt="">
                         <h3>Mobile</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident tenetur dignissimos rerum perspiciatis nisi quidem?</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident tenetur dignissimos rerum perspiciatis
+                            nisi quidem?</p>
                         <a class="btn" href="#">Saiba mais</a>
                     </div>
                 </div>
@@ -105,14 +137,18 @@
 
     <footer>
         <div>
-            <p>Site feito por <a href="https://br.linkedin.com/in/jessikacostac" target="_blank">Jéssika Costa Cardoso</a> Projeto desenvolvido para fins de estudo na {Reprograma}</p>
+            <div class="barra">
+                <img src="./assets/img/barra-menu.png" alt="">
+            </div>
+            <p>Site feito por
+                <a href="https://br.linkedin.com/in/jessikacostac" target="_blank">Jéssika Costa Cardoso</a> Projeto desenvolvido para fins de estudo na {Reprograma}</p>
         </div>
     </footer>
 
     <script src="./assets/js/jquery-3.2.1.min.js"></script>
     <script src="./assets/slick/slick.min.js"></script>
     <script>
-        $(document).ready(function(){
+        $(document).ready(function () {
             $("#slider").slick({
                 autoplay: true,
                 autoplaySpeed: 3000,
@@ -120,25 +156,25 @@
                 dots: true
             });
 
-           const exibirCarreira = function(){
+            const exibirCarreira = function () {
                 const addStyle = document.querySelector("#exibir-carreira")
-                addStyle.style.display="block"
-           }
+                addStyle.style.display = "block"
+            }
 
             const front = document.querySelector(".front")
-    	    front.addEventListener("click", function(){
+            front.addEventListener("click", function () {
                 exibirCarreira()
             })
 
             const back = document.querySelector(".back")
-    	    back.addEventListener("click", function(){
+            back.addEventListener("click", function () {
                 exibirCarreira()
             })
 
             const mobile = document.querySelector(".mobile")
-    	    mobile.addEventListener("click", function(){
+            mobile.addEventListener("click", function () {
                 exibirCarreira()
-            })        
+            })
         })
     </script>
 </body>
