update page index and create page front

--- a/front.html
+++ b/front.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Developing<Div>as> </title>
+    <title> Developing
+        <Div>as> </title>
     <link rel="icon" href="./assets/img/logo/bathroom-2028084_1280.png" sizes="64x64">
-    <link rel="stylesheet" type="text/css" href="./assets/slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="./assets/slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="./assets/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/slick/slick-theme.css" />
     <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 
@@ -14,96 +16,77 @@
     <nav>
         <div class="barra">
             <div>
-                <a href="#">                
-                    <img src="./assets/img/barra-menu.png" alt="">
-                </a>
+                <img src="./assets/img/barra-menu.png" alt="">
             </div>
         </div>
         <div class="menu">
-            <a href="index.html"><img class="logo" src="./assets/img/logo/logo-azul.png" alt="imagem do logo, representado por..."></a>
+            <a href="index.html">
+                <img class="logo" src="./assets/img/logo/logo-azul.png" alt="imagem do logo, representado por...">
+            </a>
             <div>
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="#carreira">Desenvolvedora Front-End</a></li>
-                    <li><a href="acessibilidade-web.html">Acessibilidade Web</a></li>
-                    <li><a href="comunidades-eventos.html">Comunidade/Eventos</a></li>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="acessibilidade-web.html">Acessibilidade Web</a>
+                    </li>
                 </ul>
             </div>
         </div>
-        
-    </nav>
-    <main>
-        <section class="info">
-            <div class="title">
-                <h2>Desenvolvimento Front-End</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore distinctio aliquam nemo adipisci necessitatibus consectetur laborum commodi fugiat ipsam natus quidem ducimus accusantium voluptatibus pariatur inventore excepturi sunt provident obcaecati mollitia aliquid sapiente, iusto architecto reiciendis sint! Hic a itaque, non obcaecati laborum unde velit pariatur culpa modi doloremque! Velit.</p>
-                <div class="cards">
-                    <div>
-                        <h3>Titulo</h3>
-                        <p><img src="" alt="">_____________</p>
-                        <p>67%</p>
-                    </div>
-                    <div>
-                        <h3>Titulo</h3>
-                        <p><img src="" alt="">_____________</p>
-                        <p>67%</p>
-                    </div>
-                    <div>
-                        <h3>Titulo</h3>
-                        <p><img src="" alt="">_____________</p>
-                        <p>67%</p>
-                    </div>
-                </div>    
-            </div>
-         </section>
 
-        <section id="carreira" class="carreiras">
+    </nav>
+    <header>
+        <div id="slider">
             <div>
+                <img src="./assets/img/slider1.jpg" alt="Imagem de um rosto de uma mulher coberto pela metade do lado esquerdo por uma sombra de números binários, e ela está sendo apontada por um braço humano de um lado e do outro por um braço robótico. ">
                 <div class="title">
-                    <h2>Carreiras em Tecnologia</h2>
+                    <h2>Desenvolvimento Front-End</h2>
                     <p>Saiba mais sobre algumas das áreas dentro de tecnologia que você pode atuar!</p>
                 </div>
-                <div class="cards">
-                    <div class="front">
-                        <img src="./assets/img/front-end.png.png" alt="">
-                        <h3>Front-End</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident tenetur dignissimos rerum perspiciatis nisi quidem?</p>
-                        <a class="btn" href="#">Saiba mais</a>
-                    </div>
-                    <div class="back">
-                        <img src="./assets/img/back-end.jpg" alt="">
-                        <h3>Back-End</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident tenetur dignissimos rerum perspiciatis nisi quidem?</p>
-                        <a class="btn" href="#">Saiba mais</a>
-                    </div>
-                    <div class="mobile">
-                        <img src="./assets/img/android.png" alt="">
-                        <h3>Mobile</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident tenetur dignissimos rerum perspiciatis nisi quidem?</p>
-                        <a class="btn" href="#">Saiba mais</a>
-                    </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section class="front-menu">
+            <div class="barra">
+                <img src="./assets/img/barra-section.png" alt="">
+            </div>
+            <h2>Desenvolvimento Front-End</h2>
+            <div class="cards">
+                <div class="title">
+                    <p>Profissão</p>
+                </div>
+                <div class="title">
+                    <p>Estudos/Links</p>
+
+                </div>
+                <div class="title">
+                    <p>Dúvidas</p>
                 </div>
             </div>
         </section>
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus soluta ab, recusandae nemo nesciunt, voluptates neque ullam error eligendi quas, omnis necessitatibus consectetur dicta eveniet ea at delectus aperiam porro?
 
-        <section id="exibir-carreira">
-            <div class="title">
-                <h2>Desenvolvimento Front-End</h2>
-                <p>Saiba mais sobre algumas das áreas dentro de tecnologia que você pode atuar!</p>
-            </div>
+            </p>
         </section>
     </main>
 
     <footer>
         <div>
-            <p>Site feito por <a href="https://br.linkedin.com/in/jessikacostac" target="_blank">Jéssika Costa Cardoso</a> Projeto desenvolvido para fins de estudo na {Reprograma}</p>
+            <div class="barra">
+                <img src="./assets/img/barra-menu.png" alt="">
+            </div>
+            <p>Site feito por
+                <a href="https://br.linkedin.com/in/jessikacostac" target="_blank">Jéssika Costa Cardoso</a> Projeto desenvolvido para fins de estudo na {Reprograma}</p>
         </div>
     </footer>
 
     <script src="./assets/js/jquery-3.2.1.min.js"></script>
     <script src="./assets/slick/slick.min.js"></script>
     <script>
-        $(document).ready(function(){
+        $(document).ready(function () {
             $("#slider").slick({
                 autoplay: true,
                 autoplaySpeed: 3000,
@@ -111,25 +94,25 @@
                 dots: true
             });
 
-           const exibirCarreira = function(){
+            const exibirCarreira = function () {
                 const addStyle = document.querySelector("#exibir-carreira")
-                addStyle.style.display="block"
-           }
+                addStyle.style.display = "block"
+            }
 
             const front = document.querySelector(".front")
-    	    front.addEventListener("click", function(){
+            front.addEventListener("click", function () {
                 exibirCarreira()
             })
 
             const back = document.querySelector(".back")
-    	    back.addEventListener("click", function(){
+            back.addEventListener("click", function () {
                 exibirCarreira()
             })
 
             const mobile = document.querySelector(".mobile")
-    	    mobile.addEventListener("click", function(){
+            mobile.addEventListener("click", function () {
                 exibirCarreira()
-            })        
+            })
         })
     </script>
 </body>
