--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="#carreira">Desenvolvedora Front-End</a>
+                        <a href="#carreira">Carreiras em Tecnologia</a>
                     </li>
                     <li>
                         <a href="acessibilidade-web.html">Acessibilidade Web</a>
@@ -105,22 +105,31 @@
                     <div class="front">
                         <img src="./assets/img/front-end.png.png" alt="">
                         <h3>Front-End</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident tenetur dignissimos rerum perspiciatis
-                            nisi quidem?</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
                         <a class="btn" href="#">Saiba mais</a>
                     </div>
                     <div class="back">
                         <img src="./assets/img/back-end.jpg" alt="">
                         <h3>Back-End</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident tenetur dignissimos rerum perspiciatis
-                            nisi quidem?</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
                         <a class="btn" href="#">Saiba mais</a>
                     </div>
                     <div class="mobile">
                         <img src="./assets/img/android.png" alt="">
                         <h3>Mobile</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident tenetur dignissimos rerum perspiciatis
-                            nisi quidem?</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <a class="btn" href="#">Saiba mais</a>
+                    </div>
+                    <div class="mobile">
+                        <img src="./assets/img/android.png" alt="">
+                        <h3>Mobile</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <a class="btn" href="#">Saiba mais</a>
+                    </div>
+                    <div class="mobile">
+                        <img src="./assets/img/android.png" alt="">
+                        <h3>Mobile</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
                         <a class="btn" href="#">Saiba mais</a>
                     </div>
                 </div>
@@ -163,7 +172,8 @@
 
             const front = document.querySelector(".front")
             front.addEventListener("click", function () {
-                exibirCarreira()
+                console.log("ook")
+                window.location="front.html"
             })
 
             const back = document.querySelector(".back")
