--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     </li>
                 </ul>
             </div>
+            <div class="menu-hamburguer"><a href="#"><img src="./assets/img/menu-hamburguer.png" alt=""></a>  </div>
         </div>
 
     </nav>
@@ -118,18 +119,6 @@
                         <img src="./assets/img/android.png" alt="">
                         <h3>Mobile</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                        <a class="btn" href="#">Saiba mais</a>
-                    </div>
-                    <div class="mobile">
-                        <img src="./assets/img/android.png" alt="">
-                        <h3>Mobile</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                        <a class="btn" href="#">Saiba mais</a>
-                    </div>
-                    <div class="mobile">
-                        <img src="./assets/img/android.png" alt="">
-                        <h3>Mobile</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
                         <a class="btn" href="#">Saiba mais</a>
                     </div>
                 </div>
