--- a/front.html
+++ b/front.html
@@ -67,7 +67,7 @@
             </div>
         </section>
         <section>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus soluta ab, recusandae nemo nesciunt, voluptates neque ullam error eligendi quas, omnis necessitatibus consectetur dicta eveniet ea at delectus aperiam porro?
+            <p style="height: 500px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus soluta ab, recusandae nemo nesciunt, voluptates neque ullam error eligendi quas, omnis necessitatibus consectetur dicta eveniet ea at delectus aperiam porro?
 
             </p>
         </section>
