--- a/front.html
+++ b/front.html
@@ -24,22 +24,25 @@
                 <img class="logo" src="./assets/img/logo/logo-azul.png" alt="imagem do logo, representado por...">
             </a>
             <div>
-                <ul>
+                <ul class="dropdown">
                     <li>
                         <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="#carreira">Carreiras em Tecnologia</a>
                     </li>
                     <li>
                         <a href="acessibilidade-web.html">Acessibilidade Web</a>
                     </li>
                 </ul>
             </div>
+            <div ><img class="menu-hamburguer" src="./assets/img/menu-hamburguer.png" alt="">  </div>
         </div>
-
     </nav>
     <header>
         <div id="slider">
             <div>
-                <img src="./assets/img/slider1.jpg" alt="Imagem de um rosto de uma mulher coberto pela metade do lado esquerdo por uma sombra de números binários, e ela está sendo apontada por um braço humano de um lado e do outro por um braço robótico. ">
+                <img src="./assets/img/linguagens.png" alt="Imagem de um rosto de uma mulher coberto pela metade do lado esquerdo por uma sombra de números binários, e ela está sendo apontada por um braço humano de um lado e do outro por um braço robótico. ">
                 <div class="title">
                     <h2>Desenvolvimento Front-End</h2>
                     <p>Saiba mais sobre algumas das áreas dentro de tecnologia que você pode atuar!</p>
